# obs-source-record

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  source-record.c
.github/workflows/: build.yml
CI/macos/: source-record.pkgproj
cmake/: FindLibObs.cmake
data/locale/: de-DE.ini  en-US.ini  ja-JP.ini  pl-PL.ini  pt-BR.ini  tr-TR.ini  zh-CN.ini
tests/: repro_settings_restart.py  requirements.txt  smoke_websocket.py
